syntax = "proto3";

package customer;

import "google/protobuf/empty.proto";

service Customer {
  rpc SaveCustomers (stream CustomerDef) returns (CustomerResponse) {};
  rpc GetRamdomCustomer (google.protobuf.Empty) returns (CustomerDef) {};
  rpc GetComments(CustomerDef) returns (stream Comment) {};
}

enum UserStatus {
  UNKNOWN = 0;
  OFFLINE = 1;
  BUSY = 2;
  AVAILABLE = 3;
}

message Comment {
  string comment = 1;
}
message CustomerDef {
  string name = 1;
  int32 age = 2;
  UserStatus status = 3;
}

message CustomerResponse {
  string message = 1;
}